fixtures/frontend/milestone-1/invalid/each_missing_key.aivi
val listView =
    <each of={items} as={item}>
        <Row item={item} />
    </each>
